[gd_scene load_steps=15 format=3 uid="uid://cejkwop15lrvn"]

[ext_resource type="Script" path="res://scenes/game_objects/main_character.gd" id="1_4gajb"]
[ext_resource type="Texture2D" uid="uid://bbtl23ex7hmx5" path="res://assets/character/Knight.png" id="2_8g4bo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qh51k"]
size = Vector2(16, 17.175)

[sub_resource type="CircleShape2D" id="CircleShape2D_xpm44"]
radius = 9.02014

[sub_resource type="Animation" id="Animation_wi0o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4njqb"]
resource_name = "attack1"
length = 0.61
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_x1e0r"]
resource_name = "attack2"
length = 0.91
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_e6xy0"]
resource_name = "attack3"
length = 1.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_k5115"]
resource_name = "block"
length = 0.31
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58]
}

[sub_resource type="Animation" id="Animation_rqntl"]
resource_name = "death"
length = 0.31
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [77, 78, 79, 80]
}

[sub_resource type="Animation" id="Animation_36vf4"]
resource_name = "hurt"
length = 0.31
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69]
}

[sub_resource type="Animation" id="Animation_ibmq8"]
resource_name = "idle"
length = 0.51
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_j24p8"]
resource_name = "walk"
length = 0.71
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqajq"]
_data = {
"RESET": SubResource("Animation_wi0o0"),
"attack1": SubResource("Animation_4njqb"),
"attack2": SubResource("Animation_x1e0r"),
"attack3": SubResource("Animation_e6xy0"),
"block": SubResource("Animation_k5115"),
"death": SubResource("Animation_rqntl"),
"hurt": SubResource("Animation_36vf4"),
"idle": SubResource("Animation_ibmq8"),
"walk": SubResource("Animation_j24p8")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(0, -1)
collision_mask = 42
script = ExtResource("1_4gajb")
metadata/_edit_group_ = true

[node name="Attack1Area" type="Area2D" parent="." groups=["player_attack1"]]
unique_name_in_owner = true
position = Vector2(1, 0.175)
collision_layer = 12
collision_mask = 12

[node name="HitboxAttack1" type="CollisionShape2D" parent="Attack1Area" groups=["player_attack1"]]
unique_name_in_owner = true
position = Vector2(14, -2.5875)
shape = SubResource("RectangleShape2D_qh51k")

[node name="CharacterImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_8g4bo")
hframes = 11
vframes = 8

[node name="CharacterCamera" type="Camera2D" parent="CharacterImage"]
zoom = Vector2(3.5, 3.5)

[node name="CharacterBody" type="CollisionShape2D" parent="." groups=["character_body"]]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_xpm44")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jqajq")
}
autoplay = "idle"

[connection signal="body_entered" from="Attack1Area" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
